<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateHabitActivity">

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"/>

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:lines="2"/>

        <Button
            android:id="@+id/btn_choose_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="chooseImage"
            android:text="@string/choose_image"/>

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:contentDescription="@string/image"/>

        <Button
            android:id="@+id/btn_save_habit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="storeHabit"
            android:text="@string/save_habit"/>

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/error"
            android:textColor="@color/red"/>

</LinearLayout>